# zero-to-production

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md
.cargo/: config.toml
.github/workflows/: rust.yml
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20230831063133_make_subscriptions_status_not_null.sql  20230831063431_create_subscription_tokens_table.sql  20230910135317_create_users_table.sql  20230912211932_remove_salt_from_users.sql
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  mod.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
tests/: .gitignore  health_check.rs
tests/api/: health_check.rs  helpers.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
