[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"


[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"


[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = "0.11"
serde = { version = "1", features = ["derive"] }
config = "0.13.3"
uuid = { version = "0.8.1", features = ["v4"] }
chrono = "0.4.15"
# log = "0.4.20"
env_logger = "0.10.0"
tracing = { version = "0.1", features = ["log"] }
# tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.2.12", features = [
    "registry",
    "env-filter",
] }
tracing-bunyan-formatter = "0.2"
tracing-log = "0.1.3"
tracing-actix-web = "0.7.6"

[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline",
]

[dev-dependencies]
once_cell = "1.18.0"
